deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-website-deployment
  labels:
    app: static-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: static-website
  template:
    metadata:
      labels:
        app: static-website
    spec:
      containers:
      - name: dissonance
        image: xmondo/melondust:dream-cluster-image-v1
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
