ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-website-ingress
  namespace: default
  annotations:
    kubernetes.io/spec.ingressClassName: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: dreamtime.xmondo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-website-service
            port:
              number: 80
